--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
+    "react-icons": "^4.8.0",
     "sequelize": "^6.25.3"
   },
   "devDependencies": {
