--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "openai": "^3.2.1",
     "pg": "^8.8.0",
     "react-icons": "^4.8.0",
     "sequelize": "^6.25.3",
