--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
     "openai": "^3.2.1",
     "pg": "^8.8.0",
     "react-icons": "^4.8.0",
+    "react-router": "^6.11.2",
     "sequelize": "^6.25.3",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
     "axios": "^1.1.3",
-    "babel-loader": "^9.0.0",
+    "babel-loader": "^9.1.2",
     "chai": "^4.3.6",
     "dotenv-webpack": "^8.0.1",
     "mocha": "^10.1.0",
