--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "babel-loader": "^9.1.2",
     "chai": "^4.3.6",
     "dotenv-webpack": "^8.0.1",
+    "install": "^0.13.0",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
+    "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
