--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "hamburger-react": "^2.5.0",
     "jsonwebtoken": "^9.0.0",
     "openai": "^3.2.1",
     "pg": "^8.8.0",
@@ -44,7 +45,6 @@
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
     "npm": "^9.6.7",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
