--- a/package.json
+++ b/package.json
@@ -20,18 +20,25 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.3",
     "@mui/styled-engine-sc": "^5.12.0",
+    "assert": "^2.0.0",
     "bcrypt": "^5.1.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "hamburger-react": "^2.5.0",
+    "https-browserify": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "openai": "^3.2.1",
     "pg": "^8.8.0",
     "react-icons": "^4.8.0",
     "react-router": "^6.11.2",
     "sequelize": "^6.25.3",
-    "styled-components": "^5.3.11"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "styled-components": "^5.3.11",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
