--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "proxy": "<http://localhost:4242>",
   "scripts": {
     "build": "webpack",
     "build:dev": "npm run build -- --watch --mode=development",
@@ -38,6 +39,7 @@
     "sequelize": "^6.25.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "stripe": "^12.9.0",
     "styled-components": "^5.3.11",
     "url": "^0.11.0"
   },
