--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "styled-components": "^5.3.11",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
@@ -61,8 +63,6 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "stripe": "^12.9.0",
-    "supertest": "^6.3.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "supertest": "^6.3.1"
   }
 }
