--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:dev": "DATABASE_URL=postgres://localhost/acme_test_db npm run test -- --watch",
     "test:dev:quiet": "QUIET=true npm run test:dev",
     "start:dev": "JWT=felix nodemon server/index.js --ignore dist/ --ignore src/ & npm run build:dev",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "seed": "node seed.js"
   },
   "keywords": [],
   "author": "",
